<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectWar</string>
    
    <string name="title_resource">Project - War</string>
    <string name="online_resource">Online</string>
    <string name="local_resource">Local</string>
    <string name="gamesettings_go">Go!</string>
    
    <string name="gamesettings_easy">Easy</string>
	<string name="gamesettings_medium">Medium</string>
    <string name="gamesettings_hard">Hard</string>
    
    <string name="gamesettings_map_name"></string>
    
    <!-- Menu related -->
    
    <string name="finish_text">Im done!</string>
    <string name="day_text">Game Day: </string>
	
    <color name="white">#FFFFFF</color>
    <color name="yellow">#FFFF00</color>
    <color name="fuchsia">#FF00FF</color>
    <color name="red">#FF0000</color>
    <color name="silver">#C0C0C0</color>
    <color name="gray">#808080</color>
    <color name="olive">#808000</color>
    <color name="purple">#800080</color>
    <color name="maroon">#800000</color>
    <color name="aqua">#00FFFF</color>
    <color name="lime">#00FF00</color>
    <color name="teal">#008080</color>
    <color name="green">#008000</color>
    <color name="blue">#0000FF</color>
    <color name="navy">#000080</color>
    <color name="black">#000000</color>

</resources>