<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="horizontal" >

    <ListView
        android:id="@+id/settings_map_list"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_weight="0.4" >
    </ListView>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6" >

        <Button
            android:id="@+id/settings_go_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/gamesettings_go" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/settings_go_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/settings_radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gamesettings_easy" />

            <RadioButton
                android:id="@+id/settings_radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamesettings_medium" />

            <RadioButton
                android:id="@+id/settings_radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamesettings_hard" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/settings_map_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/settings_go_button"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</LinearLayout>