<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_resource"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/online_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="94dp"
            android:text="@string/online_resource" />

        <Button
            android:id="@+id/local_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/online_button"
            android:layout_alignBottom="@+id/online_button"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="97dp"
            android:text="@string/local_resource" />

    </RelativeLayout>

</LinearLayout>
